compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__tuple_bit_array_case.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    #(<<>>) -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(<<>>) -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x[0].bitSize === 0) {
    return 1;
  } else {
    return 2;
  }
}
