compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__tuple_multiple_bit_arrays_case.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    #(<<>>, <<1>>, <<2, 3>>) -> True\n    _ -> False\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    #(<<>>, <<1>>, <<2, 3>>) -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x[0].bitSize === 0) {
    let $ = x[1];
    if ($.bitSize === 8) {
      let $1 = x[2];
      if (
        $1.bitSize >= 8 &&
        $.byteAt(0) === 1 &&
        $1.byteAt(0) === 2 &&
        $1.bitSize === 16 &&
        $1.byteAt(1) === 3
      ) {
        return true;
      } else {
        return false;
      }
    } else {
      return false;
    }
  } else {
    return false;
  }
}
