compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__unaligned_int_expression_requires_v1_9.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<0:1>>\n}\n  "
---
----- SOURCE CODE

pub fn main() {
  <<0:1>>
}
  

----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:3:7
  │
3 │   <<0:1>>
  │       ^ This requires a Gleam version >= 1.9.0

Use of unaligned bit arrays on the JavaScript target was introduced in
version v1.9.0. But the Gleam version range specified in your `gleam.toml`
would allow this code to run on an earlier version like v1.8.0, resulting
in compilation errors!

Hint: Remove the version constraint from your `gleam.toml` or update it to
be:

    gleam = ">= 1.9.0"
